<resources>
    <string name="app_name">GdzieJestMojeDziecko?</string>
    <!-- Strings related to login and register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="error_invalid_email">Adres Email nie jest poprawny</string>
    <string name="error_invalid_password">Hasło jest za krótkie</string>
    <string name="error_incorrect_password">Hasło nie jest poprawne</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="server_client_id" translatable="false">287785973542-1vbk8426nr2pvi7fpkjapelh81ejsi98.apps.googleusercontent.com</string>
    <string name="google_sign_up">Zaloguj się z Google</string>
    <string name="title_activity_kid" translatable="false">Map</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="name_prompt">Imię</string>
    <string name="prompt_surname">Nazwisko</string>
    <string name="tv_register">Rejestracja</string>
    <string name="rb_kid">Dziecko</string>
    <string name="rb_parent">Rodzic</string>
    <string name="button_register">Zarejestruj się</string>
    <string name="register_prompt">Nie masz konta? Zarejestruj się!</string>
    <string name="title_activity_maps">Map</string>
    <string name="login_text">Logowanie</string>

    <string name="shared_preferences_file">app_preferences</string>
    <string name="title_activity_parent_main">ParentMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_kids_label">Dzieci</string>
    <string name="drawer_areas_label">Obszary</string>
    <string name="drawer_rules_label">Reguły</string>
    <string name="drawer_tools_label">Ustawienia</string>
    <string name="drawer_logout_label">Wyloguj się</string>
    <string name="drawer_map_label">Mapa</string>
    <string name="drawer_code_label">Kod</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kid_main_activity_label">KidMainActivity</string>
    <string name="add_kid_label">Dodaj dziecko</string>
    <string name="kid_name_hint">Imię dziecka</string>
    <string name="kid_code_hint">Token dziecka</string>
    <string name="add_button_label">Dodaj</string>

    <string name="color_blue_label">Niebieski</string>
    <string name="color_red_label">Czerwony</string>
    <string name="search">Szukaj</string>
    <string name="confirm_area_label">Zatwierdź</string>
    <string name="cancel_area_label">Anuluj</string>
    <string name="back_label">Cofnij</string>
    <string name="msg_token_fmt" />
    <string name="save_area_label">Zapisz obszar</string>
    <string name="area_name_placeholder">Nazwa</string>
    <string name="area_icon_desc">Area icon</string>


    <!-- List of area icons -->
    <string name="area_home_icon">Dom</string>
    <string name="area_building_icon">Budynek</string>
    <string name="area_workplace_icon">Praca</string>
    <string name="area_book_icon">Książka</string>
    <string name="select_kids_spinner_label">Wybierz dzieci</string>
    <string name="save_area_button_label">Zapisz</string>
    <string name="select_color_title">Wybierz kolor:</string>
    <string name="area_icon_description">Area icon</string>
    <string name="last_location_label">Ostatnia aktualizacja lokalizacji:</string>

    <string name="no_last_location">Brak ostatniej lokalizacji</string>


    <string name="add_rule_label">Dodaj regułę</string>
    <string name="rule_start_date">Data rozpoczęcia</string>
    <string name="rule_end_date">Data zakończenia</string>
    <string name="rule_start_time">Czas rozpoczęcia</string>
    <string name="rule_end_time">Czas zakończnia</string>
    <string name="rule_default_time">Wybierz godzinę</string>
    <string name="rule_default_date">Wybierz dzień</string>

    <string name="rules_repetition_none">Tylko raz</string>
    <string name="rules_repetition_daily">Codziennie</string>
    <string name="rules_repetition_weekly">Cotygodniowo</string>
    <string name="rules_repetition_monthly">Comiesięcznie</string>
    <string name="rules_repetition_yearly">Co rok</string>
    <string name="rules_repetition_work_days">Dni robocze</string>
    <string name="rules_repetition_weekends">Weekendy</string>
    <string name="rule_repetition_label">Powtarzanie</string>


    <!--Activity titles-->
    <string name="activity_parent_main_title">Aplikacja rodzica</string>
    <string name="activity_area_list_title">Lista obszarów</string>
    <string name="activity_choose_kid_title">Wybierz dziecko</string>
    <string name="activity_kid_main_title">Aplikacja dziecka</string>
    <string name="activity_choose_area_title">Wybierz obszar</string>
</resources>
