<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_kids"
            android:title="@string/drawer_kids_label" />
        <item
            android:id="@+id/nav_areas"
            android:title="@string/drawer_areas_label" />
        <item
            android:id="@+id/nav_rules"
            android:title="@string/drawer_rules_label" />
        <item
            android:id="@+id/nav_tools"
            android:title="@string/drawer_tools_label" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/drawer_logout_label"/>
    </group>



</menu>
