<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context=".RegisterActivity">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/et_email_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/et_surname_register"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_surname_register"
            app:layout_constraintTop_toBottomOf="@+id/et_surname_register" />

        <EditText
            android:id="@+id/et_password_register"
            android:layout_width="0dp"
            android:layout_height="51dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/et_email_register"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/et_email_register"
            app:layout_constraintTop_toBottomOf="@+id/et_email_register" />

        <EditText
            android:id="@+id/et_name_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/name_prompt"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_parent_email" />

        <EditText
            android:id="@+id/et_surname_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/prompt_surname"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/et_name_register"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_name_register"
            app:layout_constraintTop_toBottomOf="@+id/et_name_register" />

        <TextView
            android:id="@+id/tv_parent_email"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tv_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/rg_LoginAccountType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/et_password_register"
            app:layout_constraintTop_toBottomOf="@+id/et_password_register">

            <RadioButton
                android:id="@+id/radio_kid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:text="@string/rb_kid" />

            <RadioButton
                android:id="@+id/radio_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onRadioButtonClicked"
                android:text="@string/rb_parent" />
        </RadioGroup>


        <Button
            android:id="@+id/button_register"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/button_register"
            app:layout_constraintEnd_toEndOf="@+id/et_password_register"
            app:layout_constraintTop_toBottomOf="@+id/rg_LoginAccountType" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>