<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_add_rule_label"
            style="@style/Base.TextAppearance.AppCompat.Display2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/add_rule_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_start_date_label"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/rule_start_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_rule_label" />

        <TextView
            android:id="@+id/tv_end_date_label"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:textSize="20sp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rule_end_date"
            app:layout_constraintStart_toStartOf="@+id/tv_start_date_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_start_date_label" />

        <TextView
            android:id="@+id/tv_start_time_label"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:textSize="20sp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/rule_start_time"
            app:layout_constraintStart_toStartOf="@+id/tv_end_date_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_end_date_label" />

        <TextView
            android:id="@+id/tv_end_time_label"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:textSize="20sp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rule_end_time"
            app:layout_constraintStart_toStartOf="@+id/tv_start_time_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_start_time_label" />

        <TextView
            android:id="@+id/tv_start_date"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:text="@string/rule_default_date"
            android:textColor="@color/green"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_start_date_label"
            app:layout_constraintStart_toEndOf="@+id/tv_start_date_label" />

        <TextView
            android:id="@+id/tv_end_date"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_default_date"
            app:layout_constraintBottom_toBottomOf="@+id/tv_end_date_label"
            app:layout_constraintStart_toStartOf="@+id/tv_start_date" />

        <TextView
            android:id="@+id/tv_start_time"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_default_time"
            app:layout_constraintBottom_toBottomOf="@+id/tv_start_time_label"
            app:layout_constraintStart_toStartOf="@+id/tv_end_date" />

        <TextView
            android:id="@+id/tv_end_time"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rule_default_time"
            app:layout_constraintBottom_toBottomOf="@+id/tv_end_time_label"
            app:layout_constraintStart_toStartOf="@+id/tv_start_time" />

        <Spinner
            android:id="@+id/spinner_areas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_end_time_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_end_time_label" />

        <Spinner
            android:id="@+id/spinner_repetition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="@+id/spinner_areas"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/spinner_areas"
            app:layout_constraintTop_toBottomOf="@+id/spinner_areas" />

        <Button
            android:id="@+id/button_add_rule"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/add_button_label"
            app:layout_constraintEnd_toEndOf="@+id/spinner_repetition"
            app:layout_constraintTop_toBottomOf="@+id/spinner_repetition" />

        <View
            android:id="@+id/view_separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/gray"
            app:layout_constraintStart_toStartOf="@+id/tv_end_date_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_end_date_label" />

    </android.support.constraint.ConstraintLayout>


</ScrollView>
