<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme"
        tools:context=".Parent.AddKidActivity">

        <TextView
            android:id="@+id/tv_add_kid"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/add_kid_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_kid_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/kid_name_hint"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_kid" />

        <EditText
            android:id="@+id/et_kid_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/kid_code_hint"
            android:inputType="numberSigned"
            app:layout_constraintEnd_toEndOf="@+id/et_kid_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_kid_name"
            app:layout_constraintTop_toBottomOf="@+id/et_kid_name" />

        <TextView
            android:id="@+id/tv_icon_preview"
            android:layout_width="40dp"
            android:layout_height="40dp"
            tools:text="J"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="28dp"
            android:background="@drawable/circle"
            app:layout_constraintStart_toStartOf="@+id/et_kid_code"
            app:layout_constraintTop_toBottomOf="@+id/et_kid_code" />

        <Button
            android:id="@+id/button_add_kid"
            android:layout_width="152dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="onAddButtonClicked"
            android:text="@string/add_button_label"
            app:layout_constraintEnd_toEndOf="@+id/et_kid_code"
            app:layout_constraintTop_toBottomOf="@+id/tv_icon_preview" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
