<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/fragment_google_map"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="110dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/ic_cancel_black_24dp"
            android:drawableLeft="@drawable/ic_cancel_black_24dp"
            android:paddingStart="7dp"
            android:visibility="invisible"
            tools:visibility="visible"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/cancel_area_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="110dp"
            android:layout_height="43dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/ic_done_black_24dp"
            android:drawableLeft="@drawable/ic_done_black_24dp"
            android:textSize="13sp"

            android:paddingStart="7dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"

            android:text="@string/confirm_area_label"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/button_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_back"
            tools:visibility="visible"/>

        <Button
            android:id="@+id/button_back"

            android:layout_width="110dp"
            android:layout_height="42dp"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/ic_arrow_back_black_24dp"
            android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
            android:paddingStart="7dp"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="@string/back_label"

            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/button_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_cancel"
            tools:visibility="visible"/>

    </android.support.constraint.ConstraintLayout>


</FrameLayout>